feat: add HTML & CSS prototypes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="editor">
         <div class="toolbar">
-            <div class="toolbar-item">
+            <div class="image-input">
                 <input type="file" id="imageFile">
             </div>
             <div class="toolbar-item">
